# Sample

./: .gitignore  README.md  apply_migrations.bat
code/backend/: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  go.mod  go.sum  lcov.info
code/backend/api/openapi/: openapi.yaml
code/backend/api/proto/: auth.proto
code/backend/cmd/server/: main.go
code/backend/configs/: config.yaml
code/backend/internal/common/: db.go  db_repository.go  logger.go  repository.go  service.go  util.go
code/backend/internal/login/: client.go  grpc_handler.go  repository.go  rest_handler.go  service.go
code/backend/internal/login/proto/: auth.pb.go
code/backend/internal/product/: grpc_handler.go  repository.go  rest_handler.go  service.go
code/backend/internal/user/: grpc_handler.go  repository.go  rest_handler.go  service.go
code/backend/pkg/: example.go
code/backend/router/: grpc.go  grpc.rs  rest.go  rest.rs
code/backend/scripts/: migrate.sh
code/backend/src/: lib.rs  main.rs
code/backend/src/common/: db.rs  logger.rs
code/backend/src/core/: mod.rs
code/backend/src/core/common/common/: db.rs  util.rs
code/backend/src/core/configs/configs/: config.yaml
code/backend/src/core/data/: app.db
code/backend/src/core/openapi/openapi/: openapi.yaml
code/backend/src/core/proto/: auth.proto
code/backend/src/feature/: mod.rs
code/backend/src/feature/login/: client.rs  grpc_handler.rs  repository.rs  service.rs
code/backend/src/feature/login/login/: grpc_handler.rs  repository.rs  rest_handler.rs  service.rs
code/backend/src/feature/product/product/: grpc_handler.rs  repository.rs  rest_handler.rs  service.rs
code/backend/src/features/login/: client.rs  handler.rs  mod.rs  repository.rs  service.rs
code/backend/test/: integration_test.go
code/backend/tests/: integration_test.rs
(+73 files in other folders)
