[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
tonic-web = "0.10"
tower-http = { version = "0.4", features = ["cors"] }

[build-dependencies]
tonic-build = "0.10"
