[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.13", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
tonic-web = "0.13"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
hyper = "1"
hyper-util = "0.1"
tokio-stream = "0.1"
axum = "0.7"
log = "0.4"
env_logger = "0.11"
flexi_logger = "0.27"

tokio-rustls = "0.25"
rustls-pemfile = "2.0"

[build-dependencies]
tonic-build = "0.13"
